tests/shouldPass/handshake-basic.bc
//EXPECTED BEHAVIOUR:
//Message is passed from proc2 to proc1, succeeding if gate and set arithmetic is correct
//longAction should happen on a much longer timescale than the short actions

//WHAT IT TESTS:
// -arithmetic and boolean operations in gates
// -basic handshake functionality

//rate definitions
rateVar = 3.5;

//process definitions
proc1[ j ] = {@msg?[1..5 U 6..9, 8](x,y), 4}.{longAction, 0.00001};
proc2[ j ] = [(j == 3) | (j == 1+0)] -> {@msg![5, 8], rateVar}.({shortAction1, 3.6} + {shortAction2, 5});

//system line
proc1[3] || proc2[3];
